[package]
name = "hbbs"
version = "1.1.7-1"
authors = ["rustdesk <info@clouddesktop.com>"]
edition = "2021"
build = "build.rs"
default-run = "hbbs"

[[bin]]
name = "hbbr"
path = "src/hbbr.rs"

[[bin]]
name = "rustdesk-utils"
path = "src/utils.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hbb_common = { path = "libs/hbb_common" }
serde_derive = "=1.0.137"
serde = "=1.0.137"
serde_json = "=1.0.81"
lazy_static = "=1.4.0"
clap = "=2.34.0"
rust-ini = "=0.18.0"
minreq = { version = "2.4", features = ["punycode"] }
machine-uid = "=0.2.0"
mac_address = "=1.1.3"
whoami = "=1.2.1"
base64 = "=0.13.0"
axum = { version = "0.5", features = ["headers"] }
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "sqlite", "macros", "chrono", "json" ] }
deadpool = "=0.8.2"
async-trait = "=0.1.53"
async-speed-limit = { git = "https://github.com/open-trade/async-speed-limit" }
uuid = { version = "1.0", features = ["v4"] }
bcrypt = "=0.13.0"
chrono = "=0.4.19"
jsonwebtoken = "=8.1.0"
headers = "=0.3.7"
once_cell = "=1.10.0"
sodiumoxide = "=0.2.7"
tokio-tungstenite = "=0.17.1"
tungstenite = "0.17"
regex = "=1.5.5"
tower-http = { version = "0.3", features = ["fs", "trace", "cors"] }
http = "=0.2.7"
flexi_logger = { version = "0.22", features = ["async", "use_chrono_for_offset", "dont_minimize_extra_stacks"] }
ipnetwork = "=0.20.0"
local-ip-address = "=0.5.1"
dns-lookup = "=1.0.8"
ping = "=0.4.0"

[build-dependencies]
hbb_common = { path = "libs/hbb_common" }

[workspace]
members = ["libs/hbb_common"]
exclude = ["ui"]
